:memo: Add html files

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Yen Luong</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
     <img src="images/1.8SGMSYEN16H8763.jpg" alt="Yen Luong's photo" width="20%">
 
     <p>
-        Hello, my name is Yen Luong, and my journey through life has taken me on a remarkable path from my hometown in Vietnam to the vibrant Bay Area of California and now to the lively city of Philadelphia, where I’m pursuing my passion for design.
+        Hello, my name is Yen Luong, and my journey through life has taken me on a remarkable path from my hometown in Vietnam to the vibrant Bay Area of California and now to the lively city of Philadelphia, where I'm pursuing my passion for design.
     </p>
     <p>
         My story begins in Vietnam, where I spent the first 17 years of my life. The rich culture and heritage of my hometown have profoundly influenced my design philosophy. It's not just where I'm from; it's who I am, and that essence permeates every aspect of my work.
@@ -27,19 +27,21 @@
 
     <!-- link to projects-->
     <h2>
-        Projects
+        Personal projects
     </h2>
     <ul>
-        <li> My Pursuit of a Brighter Future Poster </li>
-        <li> Better Future</li>
-        <li>"The Martian" Film Poster Redesign</li>
-        <li>IDLES Band Poster</li>
-        <li>Banh Chung: A Culinary Journey into Vietnamese Heritage</li>
-        <li>Authentic Vietnamese Menu Design Kit</li>
-        <li>Boba SHop Brand Indentity Redesign</li>
-        <li>Candy Land Weather App - Bringing Sweet Forecast to Life</LI>
-        <li>Enchanting Goblincore Ceramix Sotre Website</li>
-        <li>Kinetic Typography</li>
+        <li><a href="poster1.html"> My Pursuit of a Brighter Future Poster </a></li>
+        <li><a href="poster2.html">Better Future</a></li>
+        <li><a href="martianposter.html">"The Martian" Film Poster Redesign</a></li>
+        <li><a href="IDLES">IDLES Band Poster</a></li>
+        <li><a href="brochure.html">Banh Chung: A Culinary Journey Into Vietnamese Heritage</a></li>
+        <li><a href="menudesign.html">Authentic Vietnamese Menu Design Kit</a></li>
+        <li><a href="logo.html">Boba Shop Brand Indentity Redesign</a></li>
+        <li><a href="styleguide.html">BoByButterman Style Guide Redesign</a></li>
+        <li><a href="weatherapp.html">Candy Land Weather App - Bringing Sweet Forecasts To life</a></li>
+        <li><a href="webdesign.html">Enchating Goblin Ceramic Store Website</a></li>
+        <li><a href="kinetic.html">Teenager Dream - Kinetic Typography</a></li>
+
         </ul>
 
     <!-- link to contact-->
