:construction: update index.css

--- a/about.html
+++ b/about.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="css/normalize.css" />
+    <link type="text/css" rel="stylesheet" href="css/about.css" />
     <title>About - Yen Luong</title>
 </head>
 <body>
+
+    <div  class="container">
+        <nav>
+            <a class="logo" href="index.html"></a>
+            <a class="hamb" href="#menubar">
+                <hr class="line">
+                <hr class="line">
+                <hr class="line">
+            </a>
+            
+        </nav>
+    </div>
+
 
     <!--title-->
     <h2>Yen Luong </h2>
@@ -46,6 +61,16 @@
 
     <!-- link to contact-->
     <h2>Reach out</h2>
+
+    <footer class="menu" id="menubar">
+        <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="projects.html">projects</a></li>
+        <li><a href="about.html">about me</a></li>
+        <li><a href="contact.html">contact</a></li>
+        </ul>
+        
+    </footer> 
 
 </body>
 </html>
