--- a/projects.html
+++ b/projects.html
@@ -4,19 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
-
-    <title>Contact - Yen Luong</title>
+    <title>Projects</title>
 </head>
-
 <body>
-    <!--title-->    
-    <h2>Yen Luong</h2>
-
-    <h1> GET IN TOUCH </h1>
-
-    <p>Say hello</p>
-    <a href="mailto:yl3434@drexel.edu" target="_blank">yl3434@drexel.edu</a>
-
-    <!--form goes here-->
+    
 </body>
 </html>
