:pencil: update about.css
Add resume detail

--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
-    <link type=""text/css" rel="stylesheet" href="css/projects.css">
-    <title>Projects</title>
+    <link type="text/css" rel="stylesheet" href="css/projects.css">
+    <title>Projects - Yen Luong</title>
 </head>
 <body>
-    <div  class="container">
+    <div  class="navbar">
         <nav>
             <a class="logo" href="index.html"></a>
             <a class="hamb" href="#menubar">
@@ -25,7 +25,7 @@
 
         <div class="coverpic">
             <a href=""><img src="images/pic.jpeg"></a>
-            <p>project title</p>
+            <a class="title" href="">project title</a>
         </div>
 
         <div class="coverpic"><a href="">b</a></div>
@@ -38,7 +38,7 @@
         <li><a href="index.html">home</a></li>
         <li><a href="projects.html">projects</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a href="contact.html">contact</a></li>
+        <li><a href="mailto:yl3434@drexel.edu" target="_blank">contact</a></li>
         </ul>
         
     </footer> 
