--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
 
-    <div  class="container">
+    <div  class="navbar">
         <nav>
             <a class="logo" href="index.html"></a>
             <a class="hamb" href="#menubar">
@@ -34,7 +34,7 @@
         <li><a href="index.html">home</a></li>
         <li><a href="projects.html">projects</a></li>
         <li><a href="about.html">about me</a></li>
-        <li><a href="contact.html">contact</a></li>
+        <li><a href="mailto:yl3434@drexel.edu" target="_blank">contact</a></li>
         </ul>
         
     </footer> 
