:construction: updated css file

--- a/about.html
+++ b/about.html
@@ -9,13 +9,11 @@
 </head>
 <body>
 
-    <div  class="navbar">
+    <div id="top" class="navbar">
         <nav>
             <a class="logo" href="index.html"></a>
             <a class="hamb" href="#menubar">
-                <hr class="line">
-                <hr class="line">
-                <hr class="line">
+                <img src="icon/menuicon.png" alt="menu icon">
             </a>
             
         </nav>
@@ -116,6 +114,9 @@
 
     </div>
     
+    <div class="back">      
+        <a href="#top"><img src="icon/xwhite.png" alt="back icon"></a>
+    </div>
 
     <footer class="menu" id="menubar">
         <ul>
