--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
 <body>
     
 
-    <div  class="navbar">
-        <nav>
-            <a class="logo" href="index.html"></a>
-            <a class="hamb" href="#menubar">
-                <hr class="line">
-                <hr class="line">
-                <hr class="line">
-            </a> 
-        </nav>
+    <div id="top" class="navbar">
+    <nav>
+        <a class="logo" href="index.html"></a>
+        <a class="hamb" href="#menubar">
+            <img src="icon/menuicon.png" alt="menu icon">
+        </a>
+    </nav> 
 
         <div class="intro">
             <p>Hi, my name is</p>
             <h1>Yen Luong</h1>
         </div>
         
+    </div>
+
+    <div class="back">      
+        <a href="#top"><img src="icon/xwhite.png" alt="back icon"></a>
     </div>
 
     <footer class="menu" id="menubar">
