:construction: Add html page for each project

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <!--title-->
     <h2> a little about me </h2>
 
-    <img class="profile" src="images/pic.jpeg" alt="Yen's profile picture">
+    <img class="profile" src="images/head500.jpg" alt="Yen's profile picture">
 
     <p>
         I'm Yen Luong, and my journey through life has taken me on a remarkable path from my hometown in Vietnam to the vibrant Bay Area of California and now to the lively city of Philadelphia, where I'm pursuing my passion for design.
@@ -62,8 +62,8 @@
         Personal projects
     </h2>
     <ul class="projects">
-        <li><a href="poster1.html"> Poster and Web Design </a></li>
-        <li><a href="brochure.html">Banh Chung: A Culinary Journey Into Vietnamese Heritage</a></li>
+        <li><a href="posterpage.html"> Poster and Web Design </a></li>
+        <li><a href="banhchung.html">Banh Chung: A Culinary Journey Into Vietnamese Heritage</a></li>
         <li><a href="menudesign.html">Authentic Vietnamese Menu Design Kit</a></li>
         <li><a href="logo.html">Boba Shop Brand Indentity Redesign</a></li>
         <li><a href="styleguide.html">BoByButterman Style Guide Redesign</a></li>
@@ -95,7 +95,7 @@
         <ul class="jd">
             <li>Delivered exceptional customer service by attentively receiving and fulfilling beverage and food orders, ensuring a positive and seamless experience for patrons.
             </li>
-            <li>Collaborated seamlessly with team members to foster a cohesive and customer-centric environment, contributing to the cafe’s reputation for excellence.
+            <li>Collaborated seamlessly with team members to foster a cohesive and customer-centric environment, contributing to the cafe's reputation for excellence.
             </li>
         </ul>
     </div>
@@ -105,12 +105,11 @@
     <!-- link to contact-->
     <h2>Reach out</h2>
     <div class="social">
-        <a  href="" target="_blank"><img class="contact" src="icon/ig333333.png"></a>
+        <a  href="https://www.instagram.com/neyahk/" target="_blank"><img class="contact" src="icon/ig333333.png"></a>
         <a  href="" target="_blank"><img class="contact" src="icon/linkedin333333.png"></a>
         <a  href="mailto:yl3434@drexel.edu" target="_blank"><img class="contact" src="icon/mail333333.png"></a>
     </div>
     
-
 
     </div>
     
