--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="css/projects.css">
     <title>Projects - Yen Luong</title>
 </head>
+
 <body>
     <div id="top"  class="navbar">
         <nav>
@@ -23,12 +24,12 @@
         <h2>Personal Projects</h2>
 
         <div class="coverpic">
-            <a href=""><img src="images/pic.jpeg"></a>
+            <a href="posterpage.html"><img src="images/pic.jpeg"></a>
             <a class="title" href="">Poster and Web Design</a>
         </div>
 
         <div class="coverpic">
-            <a href=""><img src="images/pic.jpeg"></a>
+            <a href="banhchung.html"><img src="images/pic.jpeg"></a>
             <a class="title" href="">Banh Chung: A Culinary Journey Into Vietnamese Heritage</a>
         </div>
 
