:construction: Add more projects pages

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
     <link type="text/css" rel="stylesheet" href="css/about.css" />
+    <link rel="icon" href="icon/profileicon.png">
     <title>About - Yen Luong</title>
 </head>
 <body>
