--- a/banhchung.html
+++ b/banhchung.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/banhchung.css">
+    <link rel="icon" href="icon/profileicon.png">
+
     <title>Banh Chung</title>
 </head>
 
@@ -35,7 +38,7 @@
 
         <div class="option">
             <a href="posterpage.html"><h3><img src="icon/back.png" alt="previous icon">Previous</h3></a>
-            <a href=""><h3>Next<img src="icon/next.png" alt="next icon"></h3></a>
+            <a href="menu.html"><h3>Next<img src="icon/next.png" alt="next icon"></h3></a>
         </div>
     </div>
 
