--- a/posterpage.html
+++ b/posterpage.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/posterpage.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="icon" href="icon/profileicon.png">
     <title>Poster and Web Design</title>
 </head>
 
