--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
     <link type="text/css" rel="stylesheet" href="css/projects.css">
+    <link rel="icon" href="icon/profileicon.png">
     <title>Projects - Yen Luong</title>
 </head>
 
@@ -34,7 +35,7 @@
         </div>
 
         <div class="coverpic">
-            <a href=""><img src="images/pic.jpeg"></a>
+            <a href="menu.html"><img src="images/pic.jpeg"></a>
             <a class="title" href="">Authentic Vietnamese Menu Design Kit</a>
         </div>
 
