:bug: Fix nonworking files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yen Luong</title>
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
-    <link rel="icon" type="image/x-icon" href="icon/profileicon.png">
+    <link rel="icons" type="image/x-icons" href="icons/profileicon.png">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="css/normalize.css">
 
@@ -18,7 +18,7 @@
     <nav>
         <a class="logo" href="index.html"></a>
         <a class="hamb" href="#menubar">
-            <img src="icon/menuicon.png" alt="menu icon">
+            <img src="icons/menuicon.png" alt="menu icons">
         </a>
     </nav> 
 
@@ -30,7 +30,7 @@
     </div>
 
     <div class="back">      
-        <a href="#top"><img src="icon/xwhite.png" alt="back icon"></a>
+        <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
     </div>
 
     <footer class="menu" id="menubar">
