--- a/projectsample.html
+++ b/projectsample.html
@@ -12,7 +12,7 @@
         <nav>
             <a class="logo" href="index.html"></a>
             <a class="hamb" href="#menubar">
-                <img src="icon/menuicon.png" alt="menu icon">
+                <img src="icons/menuicon.png" alt="menu icons">
             </a>
             
         </nav>
@@ -31,13 +31,13 @@
 
 
         <div class="option">
-            <a href=""><h3><img src="icon/back.png" alt="previous icon">Previous</h3></a>
-            <a href=""><h3>Next<img src="icon/next.png" alt="next icon"></h3></a>
+            <a href=""><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
+            <a href=""><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
         </div>
     </div>
 
     <div class="back">      
-            <a class="backicon" href="#top"><img src="icon/xwhite.png" alt="back icon"></a>
+            <a class="backicon" href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
         </div>
     
 
