--- a/banhchung.html
+++ b/banhchung.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/banhchung.css">
-    <link rel="icon" href="icon/profileicon.png">
+    <link rel="icons" href="icons/profileicon.png">
 
     <title>Banh Chung</title>
 </head>
@@ -15,7 +15,7 @@
         <nav>
             <a class="logo" href="index.html"></a>
             <a class="hamb" href="#menubar">
-                <img src="icon/menuicon.png" alt="menu icon">
+                <img src="icons/menuicon.png" alt="menu icons">
             </a>
             
         </nav>
@@ -37,13 +37,13 @@
 
 
         <div class="option">
-            <a href="posterpage.html"><h3><img src="icon/back.png" alt="previous icon">Previous</h3></a>
-            <a href="menu.html"><h3>Next<img src="icon/next.png" alt="next icon"></h3></a>
+            <a href="posterpage.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
+            <a href="menu.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
         </div>
     </div>
 
     <div class="back">      
-        <a href="#top"><img src="icon/xwhite.png" alt="back icon"></a>
+        <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
     </div>
 
     <footer class="menu" id="menubar">
