--- a/posterpage.html
+++ b/posterpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/posterpage.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="icon" href="icon/profileicon.png">
+    <link rel="icons" href="icons/profileicon.png">
     <title>Poster and Web Design</title>
 </head>
 
@@ -14,7 +14,7 @@
         <nav>
             <a class="logo" href="index.html"></a>
             <a class="hamb" href="#menubar">
-                <img src="icon/menuicon.png" alt="menu icon">
+                <img src="icons/menuicon.png" alt="menu icons">
             </a>
         
             
@@ -47,13 +47,13 @@
     </div>
 
     <div class="option">
-        <a href=""><h3><img src="icon/back.png" alt="previous icon">Previous</h3></a>
-        <a href="banhchung.html"><h3>Next<img src="icon/next.png" alt="next icon"></h3></a>
+        <a href=""><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
+        <a href="banhchung.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
     </div>
 
 
     <div class="back">      
-        <a href="#top"><img src="icon/xwhite.png" alt="back icon"></a>
+        <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
     </div>
 
 
