--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
     <link type="text/css" rel="stylesheet" href="css/projects.css">
-    <link rel="icon" href="icon/profileicon.png">
+    <link rel="icons" href="icons/profileicon.png">
     <title>Projects - Yen Luong</title>
 </head>
 
@@ -14,7 +14,7 @@
         <nav>
             <a class="logo" href="index.html"></a>
             <a class="hamb" href="#menubar">
-                <img src="icon/menuicon.png" alt="menu icon">
+                <img src="icons/menuicon.png" alt="menu icons">
             </a>
         
             
@@ -57,7 +57,7 @@
     </div>
 
     <div class="back">      
-        <a href="#top"><img src="icon/xwhite.png" alt="back icon"></a>
+        <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
     </div>
 
     <footer class="menu" id="menubar">
