:construction: add html files and images

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
     <link type="text/css" rel="stylesheet" href="css/about.css" />
-    <link rel="icons" href="icons/profileicon.png">
+    <link rel="icons" href="icons/memoji.png">
     <title>About - Yen Luong</title>
 </head>
 <body>
@@ -65,8 +65,8 @@
     <ul class="projects">
         <li><a href="posterpage.html"> Poster and Web Design </a></li>
         <li><a href="banhchung.html">Banh Chung: A Culinary Journey Into Vietnamese Heritage</a></li>
-        <li><a href="menudesign.html">Authentic Vietnamese Menu Design Kit</a></li>
-        <li><a href="logo.html">Boba Shop Brand Indentity Redesign</a></li>
+        <li><a href="menu.html">Authentic Vietnamese Menu Design Kit</a></li>
+        <li><a href="logo.html">Tea Station's Logo Redesign</a></li>
         <li><a href="styleguide.html">BoByButterman Style Guide Redesign</a></li>
         <li><a href="weatherapp.html">Candy Land Weather App - Bringing Sweet Forecasts To life</a></li>
     </ul>
