--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yen Luong</title>
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
-    <link rel="icons" type="image/x-icons" href="icons/profileicon.png">
+    <link rel="icons" type="image/x-icons" href="icons/memoji.png">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="css/normalize.css">
 
