--- a/posterpage.html
+++ b/posterpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/posterpage.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="icons" href="icons/profileicon.png">
+    <link rel="icons" href="icons/memoji.png">
     <title>Poster and Web Design</title>
 </head>
 
@@ -47,7 +47,7 @@
     </div>
 
     <div class="option">
-        <a href=""><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
+        <a href="weatherapp.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
         <a href="banhchung.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
     </div>
 
