--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/normalize.css" />
     <link type="text/css" rel="stylesheet" href="css/projects.css">
-    <link rel="icons" href="icons/profileicon.png">
+    <link rel="icons" href="icons/memoji.png">
     <title>Projects - Yen Luong</title>
 </head>
 
@@ -40,17 +40,17 @@
         </div>
 
         <div class="coverpic">
-            <a href=""><img src="images/pic.jpeg"></a>
-            <a class="title" href="">Boba Shop Brand Indentity Redesign</a>
+            <a href="logo.html"><img src="images/pic.jpeg"></a>
+            <a class="title" href="">Tea Station's Logo Redesign</a>
         </div>
 
         <div class="coverpic">
-            <a href=""><img src="images/pic.jpeg"></a>
+            <a href="styleguide.html"><img src="images/pic.jpeg"></a>
             <a class="title" href="">BoByButterman Style Guide Redesign</a>
         </div>
 
         <div class="coverpic">
-            <a href=""><img src="images/pic.jpeg"></a>
+            <a href="weatherapp.html"><img src="images/pic.jpeg"></a>
             <a class="title" href="">Candy Land Weather App - Bringing Sweet Forecasts To Life</a>
         </div>
         
