--- a/banhchung.html
+++ b/banhchung.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/banhchung.css">
-    <link rel="icons" href="icons/profileicon.png">
+    <link rel="icons" href="icons/memoji.png">
 
     <title>Banh Chung</title>
 </head>
