--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="icons" href="icons/profileicon.png">
+    <link rel="icons" href="icons/memoji.png">
     <link rel="stylesheet" href="css/menu.css">
     <title>Menu Design Kit</title>
 </head>
@@ -22,9 +22,21 @@
 
     <h2>Authentic Vietnamese Menu Design Kit</h2>
 
+    <img src="images/menumockup.jpg" alt="menu mockup" class="pic">
+
+    <p>The aim of this project is to design a menu for a local Vietnamese restaurant that showcases traditional Vietnamese dishes while keeping the design simple yet impactful. The menu's main objective is to capture the essence of Vietnamese culture and cuisine while maintaining a clean and minimalist look.
+    </p>
+    <p>The menu is designed in an organized manner, with clear sections and easy-to-read typography that reflects the elegance of Vietnamese script. The emphasis is on functionality and legibility, making it easy for customers to quickly browse through the menu and choose their desired dishes.
+        </p>
+
+        <img src="images/menu-design.jpg" alt="menu file" class="pic">
+
+    <p>In conclusion, this project focuses on creating a menu design that effectively represents the authentic Vietnamese cuisine served by the restaurant. With a clean layout and minimalist approach, the design offers a visually pleasing and user-friendly menu experience for diners, reflecting the restaurant's commitment to providing an authentic taste of Vietnam.
+    </p>
+
     <div class="option">
         <a href="banhchung.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
-        <a href=""><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
+        <a href="logo.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
     </div>
 </div>
 
