:construction: update html file

--- a/styleguide.html
+++ b/styleguide.html
@@ -23,11 +23,11 @@
 
     <h2>BoByButterman Style Guide Redesgin</h2>
 
-    <img src="images/bomockup.jpg" alt="the mockup of the styleguide" class="pic">
+    <img src="images/bostyleguide.jpg" alt="the mockup of the styleguide" class="pic">
 
     <div class="option">
         <a href="logo.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
-        <a href=""><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
+        <a href="weatherapp.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
     </div>
 </div>
 
