--- a/projects.html
+++ b/projects.html
@@ -30,27 +30,27 @@
         </div>
 
         <div class="coverpic">
-            <a href="banhchung.html"><img src="images/pic.jpeg"></a>
+            <a href="banhchung.html"><img src="images/banhchungmockup.jpg"></a>
             <a class="title" href="">Banh Chung: A Culinary Journey Into Vietnamese Heritage</a>
         </div>
 
         <div class="coverpic">
-            <a href="menu.html"><img src="images/pic.jpeg"></a>
+            <a href="menu.html"><img src="images/menumockup.jpg"></a>
             <a class="title" href="">Authentic Vietnamese Menu Design Kit</a>
         </div>
 
         <div class="coverpic">
-            <a href="logo.html"><img src="images/pic.jpeg"></a>
+            <a href="logo.html"><img src="images/logomockup.jpg"></a>
             <a class="title" href="">Tea Station's Logo Redesign</a>
         </div>
 
         <div class="coverpic">
-            <a href="styleguide.html"><img src="images/pic.jpeg"></a>
-            <a class="title" href="">BoByButterman Style Guide Redesign</a>
+            <a href="styleguide.html"><img src="images/bomockup.jpg"></a>
+            <a class="title" href="">BoByButterman Style Guide Design</a>
         </div>
 
         <div class="coverpic">
-            <a href="weatherapp.html"><img src="images/pic.jpeg"></a>
+            <a href="weatherapp.html"><img src="images/weatherappmockup.jpg"></a>
             <a class="title" href="">Candy Land Weather App - Bringing Sweet Forecasts To Life</a>
         </div>
         
