--- a/banhchung.html
+++ b/banhchung.html
@@ -13,7 +13,9 @@
 <body>
     <div id="top" class="navbar">
         <nav>
-            <a class="logo" href="index.html"></a>
+            <a class="logo" href="index.html">
+                <img src="images/yenlogo.png" alt="yen luong's logo">
+            </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
             </a>
