:construction: add logo
updated css file and changed fonts

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yen Luong</title>
-    <link type="text/css" rel="stylesheet" href="css/normalize.css" />
+    <link type="text/css" rel="stylesheet" href="css/normalize.css">
     <link rel="icons" type="image/x-icons" href="icons/memoji.png">
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="css/normalize.css">
 
 </head>
@@ -17,7 +17,7 @@
     <div id="top" class="navbar">
     <nav>
         <a class="logo" href="index.html">
-            <img src="images/yenlogo.png" alt="yen luong's logo">
+            <img src="images/yenlogocircle.png" alt="yen luong's logo">
         </a>
         <a class="hamb" href="#menubar">
             <img src="icons/menuicon.png" alt="menu icons">
@@ -25,8 +25,8 @@
     </nav> 
 
         <div class="intro">
-            <p>Hi, my name is</p>
-            <h1>Yen Luong</h1>
+            <p>Hi. My name is <a href="about.html">Yen</a>. I'm an UXID student located in Philly, PA.</p>
+
         </div>
         
     </div>
