--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <div id="top"  class="navbar">
         <nav>
             <a class="logo" href="index.html">
-                <img src="images/yenlogo.png" alt="yen luong's logo">
+                <img src="images/yenlogocircle.png" alt="yen luong's logo">
             </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
