--- a/projectsample.html
+++ b/projectsample.html
@@ -10,9 +10,11 @@
 <body>
     <div id="top" class="navbar">
         <nav>
-            <a class="logo" href="index.html"></a>
+            <a class="logo" href="index.html">
+                <img src="images/yenlogo.png" alt="yen luong's logo">
+            </a>
             <a class="hamb" href="#menubar">
-                <img src="icons/menuicon.png" alt="menu icons">
+                <img src="icons/burgericon.png" alt="menu icons">
             </a>
             
         </nav>
@@ -21,7 +23,6 @@
     <div class="inside">
         <h2>Project title</h2>
 
-       
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam perspiciatis quo, dolor temporibus hic minus quod deleniti ratione distinctio consectetur laborum? Ab id ratione ad sequi, aut consequuntur numquam dignissimos possimus architecto molestiae labore dolores voluptate assumenda. Repellat praesentium magni soluta totam, labore dolores in possimus, accusamus et, aliquam fuga.</p>
         <p>Aliquid sit quos ipsum praesentium optio repudiandae quod delectus deleniti corrupti quae. Id sunt rem vero impedit ea magnam accusantium ratione. Voluptates error omnis vero repudiandae iusto quibusdam perferendis, at accusamus! Nihil ipsum eos nesciunt quisquam illo expedita tempora qui, reiciendis vitae fugit doloribus, adipisci dicta tenetur, dolorum quidem. Illum.</p>
         <p>Ipsam dolorem nisi nam repellendus totam. Sint, nam molestiae consequuntur quod cum, asperiores recusandae provident quas ab at laudantium incidunt architecto dolore iure ea numquam voluptatibus doloribus eius omnis perferendis soluta. Molestias, doloremque error ipsum unde voluptates totam corporis ipsa soluta! Ab pariatur dolore saepe nobis qui fugit beatae accusantium.</p>
