:construction: update css files

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <div id="top" class="navbar">
         <nav>
             <a class="logo" href="index.html">
-                <img src="images/yenlogo.png" alt="yen luong's logo">
+                <img src="images/yenlogocircle.png" alt="yen luong's logo">
             </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
@@ -24,7 +24,7 @@
 
     <div class="aboutme">
         <!--title-->
-    <h2> a little about me </h2>
+    <h2> a little about <strong>me</strong> </h2>
 
     <img class="profile" src="images/head500.jpg" alt="Yen's profile picture">
 
@@ -65,7 +65,8 @@
         Personal projects
     </h2>
     <ul class="projects">
-        <li><a href="posterpage.html"> Poster and Web Design </a></li>
+        <li><a href="posterpage.html"> Poster and Web Design </a>
+        <p>view site</p></li>
         <li><a href="banhchung.html">Banh Chung: A Culinary Journey Into Vietnamese Heritage</a></li>
         <li><a href="menu.html">Authentic Vietnamese Menu Design Kit</a></li>
         <li><a href="logo.html">Tea Station's Logo Redesign</a></li>
