--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="projects.html">projects</a></li>
-        <li><a href="about.html">about me</a></li>
+        <li><a href="about.html">about</a></li>
         <li><a href="mailto:yl3434@drexel.edu" target="_blank">contact</a></li>
         </ul>
         
