:nail_care: updated css files

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </ul>
 
 
-    <h2>Education</h2>
+<!--    <h2>Education</h2>
 
     <div class="container"> 
         <h3>Drexel University</h3>
@@ -118,7 +118,7 @@
     <div class="link">
         <p>Download resume</p>
         <a href="docs/yenresume.pdf" target="_blank"><img src="icons/downloadpink.png" alt="download button"></a>
-    </div>
+    </div>-->
     
     <!-- link to contact-->
     <h2>Reach out</h2>
