--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
 
         <div class="coverpic">
             <div class="link">
-                <p>Banh Chung Brochure Design</p>
+                <p>Banh Chung Brochure</p>
                 <a href="banhchung.html"><img src="icons/righticonwhite.png" alt="download button"></a>
             </div>
             <a href="banhchung.html"><img src="images/banhchungmockup.jpg"></a>
