:nail_care: update css files

--- a/about.html
+++ b/about.html
@@ -51,13 +51,13 @@
         <li>"Banh Chung" Brochure
             <a href="banhchung.html"><img src="icons/righticonwhite.png" alt="view site button"></a>
         </li>
-        <li>Menu Design
+        <li>tay ho's menu design
             <a href="menu.html"><img src="icons/righticonwhite.png" alt="view site button"></a>
         </li>
         <li>Tea Station's Logo Redesign
             <a href="logo.html"><img src="icons/righticonwhite.png" alt="view site button"></a>
         </li>
-        <li>BoByButterman Style Guide
+        <li>Bo By Butterman Style Guide
             <a href="styleguide.html"><img src="icons/righticonwhite.png" alt="view site button"></a>
         </li>
         <li>Candy Land Weather App
