--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     <div id="top" class="navbar">
         <nav>
             <a class="logo" href="index.html">
-                <img src="images/yenlogo.png" alt="yen luong's logo">
+                <img src="images/yenlogocircle.png" alt="yen luong's logo">
             </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
@@ -22,25 +22,37 @@
         </nav>
     </div>
 
-    <h2>Authentic Vietnamese Menu Design Kit</h2>
+    <h2>Tay Ho's Menu Design</h2>
 
-    <img src="images/menumockup.jpg" alt="menu mockup" class="pic">
+    <div class="intro">
+        <p><strong>Client:</strong> Myself</p>
+        <p><strong>My role:</strong> Graphic designer</p>
+        <p><strong>Tools:</strong> InDesign, Illustrator</p>
+        <p><strong>Created:</strong> 2022</p>
+
+    </div>
 
     <p>The aim of this project is to design a menu for a local Vietnamese restaurant that showcases traditional Vietnamese dishes while keeping the design simple yet impactful. The menu's main objective is to capture the essence of Vietnamese culture and cuisine while maintaining a clean and minimalist look.
     </p>
+
+    <figure>
+        <img src="images/menumockup.jpg" alt="menu mockup" class="pic">
+        <figcaption>Mockup of the menu</figcaption>
+    </figure>
+
     <p>The menu is designed in an organized manner, with clear sections and easy-to-read typography that reflects the elegance of Vietnamese script. The emphasis is on functionality and legibility, making it easy for customers to quickly browse through the menu and choose their desired dishes.
         </p>
 
+    <figure>
         <img src="images/menu-design.jpg" alt="menu file" class="pic">
-
-    <p>In conclusion, this project focuses on creating a menu design that effectively represents the authentic Vietnamese cuisine served by the restaurant. With a clean layout and minimalist approach, the design offers a visually pleasing and user-friendly menu experience for diners, reflecting the restaurant's commitment to providing an authentic taste of Vietnam.
-    </p>
+        <figcaption>Menu, business card, letter head and to-go box</figcaption>
+    </figure>
 
     <div class="option">
-        <a href="banhchung.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
-        <a href="logo.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
+        <a href="banhchung.html"><h3><img src="icons/lefticonwhite.png" alt="previous icons">Previous</h3></a>
+        <a href="logo.html"><h3>Next<img src="icons/righticonwhite.png" alt="next icons"></h3></a>
     </div>
-</div>
+
 
 <div class="back">      
     <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
