--- a/posterpage.html
+++ b/posterpage.html
@@ -13,7 +13,7 @@
     <div id="top"  class="navbar">
         <nav>
             <a class="logo" href="index.html">
-                <img src="images/yenlogo.png" alt="yen luong's logo">
+                <img src="images/yenlogocircle.png" alt="yen luong's logo">
             </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
@@ -26,31 +26,35 @@
     <div>
         <h2>Poster and Web Design</h2>
 
-        <img class="pic" src="images/martian500.jpg" alt="the martian poster design">
+        <div class="intro">
+            <p><strong>Client:</strong> Myself</p>
+            <p><strong>My role:</strong> Graphic and UI designer</p>
+            <p><strong>Tools:</strong> Photoshop, Illustrator</p>
+            <p><strong>Created:</strong> 2020-2022</p>
+
+        </div>
+
         <p class="description"> "The Martian" Film Poster Redesign</p>
+        <img class="pic" src="images/martian500.jpg" alt="the martian poster design">
 
-        <img src="images/IDLES350.jpg" alt="IDLES band poster" class="pic">
+        <p class="description">Saul Bass poster</p>
+        <img src="images/saulbassposter.jpg" alt="Saul Bass poster" class="pic">
+
+
         <p class="description">IDLES band poster</p>
+        <img src="images/IDLES350.jpg" alt="IDLES band poster" class="pic">
 
-        <img class="pic" src="images/poster2-500.jpg" alt="poster design">
         <p class="description">"Better Future" Poster</p>
-        <p>This thought-provoking poster delves into the common belief held by many individuals that migrating to another country guarantees greater financial prosperity. It aims to challenge this assumption and shed light on the complexities and realities of such a decision. Through captivating visuals and poignant messaging, the poster serves as a reminder that while migration can offer new opportunities, the pursuit of wealth should not overshadow the importance of cultural roots, personal fulfillment, and community connections. It encourages viewers to contemplate the multifaceted aspects of migration and consider the broader implications beyond monetary gain, ultimately sparking a deeper reflection on the true meaning of success and happiness in a globalized world.</p>
-
-
+        <img class="pic" src="images/poster2-500.jpg" alt="poster design">
+        
+        <p class="description">Goblincore Ceramic Store front page design</p>
         <img src="images/web-mockup630.jpg" alt="web design" class="pic">
-        <p class="description">Enchanting Goblincore Ceramic Store front page design</p>
-        <p>This project aims to create a captivating and user-friendly website for a ceramic store, taking inspiration from Goblincore's unique design language. The website's goal is to provide visitors with an immersive and enchanting experience that showcases the store's ceramic products.
-        </p>
-        <p>The website's aesthetic is built on the foundation of Goblincore design language, incorporating elements of whimsy, nature, and fantasy. The design captures the charm and intrigue of Goblincore, creating an engaging atmosphere that resonates with the target audience.
-        </p>
-        <p>The website's color palette features neutral tones that create a harmonious and earthy ambiance, complementing the ceramic products. Subtle hues and organic textures convey a sense of natural beauty, enhancing the connection to the underlying Goblincore theme.
-        </p>
-
+        
     </div>
 
     <div class="option">
-        <a href="weatherapp.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
-        <a href="banhchung.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
+        <a href="weatherapp.html"><h3><img src="icons/lefticonwhite.png" alt="previous icons">Previous</h3></a>
+        <a href="banhchung.html"><h3>Next<img src="icons/righticonwhite.png" alt="next icons"></h3></a>
     </div>
 
 
