--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                 <p>Poster and Web Design</p>
                 <a href="posterpage.html"><img src="icons/righticonwhite.png" alt="download button"></a>
             </div>
-            <a href="posterpage.html"><img src="images/pic.jpeg"></a>
+            <a href="posterpage.html"><img src="images/sbpostermockup.jpg"></a>
         </div>
 
         <div class="coverpic">
@@ -61,7 +61,7 @@
 
         <div class="coverpic">
             <div class="link">
-                <p>BoByButterman Style Guide</p>
+                <p>Bo By Butterman Style Guide</p>
                 <a href="styleguide.html"><img src="icons/righticonwhite.png" alt="download button"></a>
             </div>
             <a href="styleguide.html"><img src="images/bomockup.jpg"></a>
