--- a/styleguide.html
+++ b/styleguide.html
@@ -14,7 +14,7 @@
     <div id="top" class="navbar">
         <nav>
             <a class="logo" href="index.html">
-                <img src="images/yenlogo.png" alt="yen luong's logo">
+                <img src="images/yenlogocircle.png" alt="yen luong's logo">
             </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
@@ -23,15 +23,25 @@
         </nav>
     </div>
 
-    <h2>BoByButterman Style Guide Redesgin</h2>
+    <h2>Bo By Butterman Style Guide</h2>
 
-    <img src="images/bostyleguide.jpg" alt="the mockup of the styleguide" class="pic">
+    <div class="intro">
+        <p><strong>Client:</strong> Myself</p>
+        <p><strong>My role:</strong> Graphic designer</p>
+        <p><strong>Tools:</strong> InDesign, Illustrator</p>
+        <p><strong>Created:</strong> 2023</p>
+
+    </div>
+
+    <figure>
+        <img src="images/bostyleguide.jpg" alt="the mockup of the styleguide" class="pic">
+        <figcaption>Mockup of the style guide</figcaption>
+    </figure>
 
     <div class="option">
-        <a href="logo.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
-        <a href="weatherapp.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
+        <a href="logo.html"><h3><img src="icons/lefticonwhite.png" alt="previous icons">Previous</h3></a>
+        <a href="weatherapp.html"><h3>Next<img src="icons/righticonwhite.png" alt="next icons"></h3></a>
     </div>
-</div>
 
 <div class="back">      
     <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
