--- a/logo.html
+++ b/logo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boba Shop Brand Indentity Menu Design Kit</title>
-    <link rel="stylesheet" href="css/logo.css">
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="icon" href="icons/profileicon.png">
 </head>
@@ -13,7 +13,7 @@
     <div id="top" class="navbar">
         <nav>
             <a class="logo" href="index.html">
-                <img src="images/yenlogo.png" alt="yen luong's logo">
+                <img src="images/yenlogocircle.png" alt="yen luong's logo">
             </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
@@ -23,6 +23,14 @@
     </div>
 
     <h2>Tea Station's Logo Redesign</h2>
+
+    <div class="intro">
+        <p><strong>Client:</strong> Myself</p>
+        <p><strong>My role:</strong> Graphic designer</p>
+        <p><strong>Tools:</strong> InDeisgn, Illustrator</p>
+        <p><strong>Created:</strong> 2021</p>
+
+    </div>
 
     <p>This project is centered on the revitalization of a boba shop's brand identity, including a fresh new logo and redesigned business cards. Drawing inspiration from the letter "T" and the imagery of a leaf, the logo concept symbolizes both the shop's name and the essence of freshness that sets boba beverages apart.
     </p>
@@ -35,20 +43,22 @@
     <p>The vibrant green color sel ected for the logo embodies the vitality and zest that our boba shop represents. My primary goal is to craft a visually captivating brand identity that not only resonates with my target audience but also encapsulates the essence of my signature boba creations.
     </p>
 
-    <img src="images/businesscardlogodesign.jpg" alt="letter head and business card" class="pic">
+    <figure>
+        <img src="images/businesscardlogodesign.jpg" alt="letter head and business card" class="pic">
+        <figcaption>Logo on business card, letter head and envelop</figcaption>
+    </figure>
 
-    <p>Incorporating this new logo into my business card design, I aim to create a lasting impression on my valued customers. The business cards will prominently feature the revitalized logo alongside essential contact information, ensuring that every interaction with our brand leaves a memorable mark.
+    <!--<p>Incorporating this new logo into my business card design, I aim to create a lasting impression on my valued customers. The business cards will prominently feature the revitalized logo alongside essential contact information, ensuring that every interaction with our brand leaves a memorable mark.
     </p>
 
 
     <p>My project endeavors to breathe new life into our boba shop's identity, infusing it with a sense of freshness and vibrancy that mirrors the exceptional quality of our beverages. Through this redesign, I seek to reaffirm my commitment to delivering an unforgettable boba experience to my patrons.
-    </p>
+    </p>-->
 
     <div class="option">
-        <a href="menu.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
-        <a href="styleguide.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
+        <a href="menu.html"><h3><img src="icons/lefticonwhite.png" alt="previous icons">Previous</h3></a>
+        <a href="styleguide.html"><h3>Next<img src="icons/righticonwhite.png" alt="next icons"></h3></a>
     </div>
-</div>
 
 <div class="back">      
     <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
