--- a/weatherapp.html
+++ b/weatherapp.html
@@ -12,7 +12,7 @@
     <div id="top" class="navbar">
         <nav>
             <a class="logo" href="index.html">
-                <img src="images/yenlogo.png" alt="yen luong's logo">
+                <img src="images/yenlogocircle.png" alt="yen luong's logo">
             </a>
             <a class="hamb" href="#menubar">
                 <img src="icons/menuicon.png" alt="menu icons">
@@ -21,27 +21,34 @@
         </nav>
     </div>
     
-    <h2>Candy Land Weather App - Bringing Sweet Forecasts To Life</h2>
+    <h2>Candy Land Weather App</h2>
 
-    <p>
+    <div class="intro">
+        <p><strong>Client:</strong> Myself</p>
+        <p><strong>My role:</strong> Graphic and UI designer</p>
+        <p><strong>Tools:</strong> AdobeXD, Illustrator</p>
+        <p><strong>Created:</strong> 2022</p>
+
+    </div>
+
+    <p class="description">
         This project focuses on designing a weather app for an imaginative land with a Candy Land theme. The app's primary function is to provide daily weather updates while incorporating delightful elements inspired by the enchanting world of candies.
     </p>
-    <p>
+    <p class="description">
         The Candy Land Weather App features a visually appealing interface with vibrant colors, playful icons, and charming candy-themed graphics. Each day, users can access the app to view the current weather status, including temperature, precipitation, wind speed, and more. The design reflects the essence of Candy Land, infusing a sense of joy and whimsy into the weather experience.
     </p>
-    <p>
+    <p class="description">
         Additionally, the app highlights important weather information for the upcoming weekend. Users can easily access forecasts, temperature trends, and other essential details to plan their activities and make the most of their weekends in this imaginary land.
     </p>
-    <p>
+    <p class="description">
         The Candy Land Weather App is designed with user-friendliness in mind, boasting intuitive navigation and a clear presentation of weather data. In summary, our project aims to create an app that combines the practicality of weather updates with the joyous spirit of Candy Land, offering users a sweet and seamless experience in their daily weather adventures.
     </p>
 
 
     <div class="option">
-        <a href="styleguide.html"><h3><img src="icons/back.png" alt="previous icons">Previous</h3></a>
-        <a href="posterpage.html"><h3>Next<img src="icons/next.png" alt="next icons"></h3></a>
+        <a href="styleguide.html"><h3><img src="icons/lefticonwhite.png" alt="previous icons">Previous</h3></a>
+        <a href="posterpage.html"><h3>Next<img src="icons/righticonwhite.png" alt="next icons"></h3></a>
     </div>
-</div>
 
 <div class="back">      
     <a href="#top"><img src="icons/xwhite.png" alt="back icons"></a>
