:nail_care: update css files

--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@
         <!--title-->
     <h1> a little about <strong>me</strong> </h1>
 
+    <img class="arrow" src="icons/arrowtransparent.png" alt="arrow icon">
+
     <img class="profile" src="images/head500.jpg" alt="Yen's profile picture">
 
         <p>
@@ -51,7 +53,7 @@
         <li>"Banh Chung" Brochure
             <a href="banhchung.html"><img src="icons/righticonwhite.png" alt="view site button"></a>
         </li>
-        <li>tay ho's menu design
+        <li>tay ho's menu
             <a href="menu.html"><img src="icons/righticonwhite.png" alt="view site button"></a>
         </li>
         <li>Tea Station's Logo Redesign
