--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
         </nav>
     </div>
 
-    <h2>Tay Ho's Menu Design</h2>
+    <h2>Tay Ho's Menu</h2>
 
     <div class="intro">
         <p><strong>Client:</strong> Myself</p>
