--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 
         <div class="coverpic">
             <div class="link">
-                <p>Menu Design</p>
+                <p>Tay Ho's Menu</p>
                 <a href="menu.html"><img src="icons/righticonwhite.png" alt="download button"></a>
             </div>
             <a href="menu.html"><img src="images/menumockup.jpg"></a>
