--- a/styleguide.html
+++ b/styleguide.html
@@ -38,6 +38,21 @@
         <figcaption>Mockup of the style guide</figcaption>
     </figure>
 
+    <div>
+        <img src="images/bobybutterman.jpg" alt="style guide page 1" class="pic">
+        <img src="images/bobybutterman2.jpg" alt="style guide page 2" class="pic">
+        <img src="images/bobybutterman3 Large 2.jpeg" alt="style guide page 3" class="pic">
+        <img src="images/bobybutterman4 Large.jpeg" alt="style guide page 4" class="pic">
+        <img src="images/bobybutterman5 Large.jpeg" alt="style guide page 5" class="pic">
+        <img src="images/bobybutterman6 Large.jpeg" alt="style guide page 6" class="pic">
+        <img src="images/bobybutterman7 Large.jpeg" alt="style guide page 7" class="pic">
+        <img src="images/bobybutterman8 Large.jpeg" alt="style guide page 7" class="pic">
+        <img src="images/bobybutterman8 Large.jpeg" alt="style guide page 8" class="pic">
+        <img src="images/bobybutterman9 Large.jpeg" alt="style guide page 9" class="pic">
+        <img src="images/bobybutterman10 Large.jpeg" alt="style guide page 10" class="pic">
+        <img src="images/bobybutterman11 Large.jpeg" alt="style guide page 11" class="pic">
+    </div>
+
     <div class="option">
         <a href="logo.html"><h3><img src="icons/lefticonwhite.png" alt="previous icons">Previous</h3></a>
         <a href="weatherapp.html"><h3>Next<img src="icons/righticonwhite.png" alt="next icons"></h3></a>
