:construction: update broken link
updated broken link and delete unnecessary files

--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
     <h2>Reach out</h2>
     <div class="social">
         <a  href="https://www.instagram.com/neyahk/" target="_blank"><img class="contact" src="icons/ig333333.png" alt="instagram icon"></a>
-        <a  href="" target="_blank"><img class="contact" src="icons/linkedin333333.png" alt="linkedin icon"></a>
+        <a  href="https://www.linkedin.com/feed/" target="_blank"><img class="contact" src="icons/linkedin333333.png" alt="linkedin icon"></a>
         <a  href="mailto:yl3434@drexel.edu" target="_blank"><img class="contact" src="icons/mail333333.png" alt="mail icon"></a>
     </div>
     
